--- a/tunein/package.json
+++ b/tunein/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.9.2",
+    "@mantine/form": "^5.9.2",
     "@mantine/hooks": "^5.9.2",
     "@tabler/icons": "^1.115.0",
     "@testing-library/jest-dom": "^5.16.5",
