--- a/tunein/package.json
+++ b/tunein/package.json
@@ -2,6 +2,7 @@
   "name": "tunein",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.9.2",
