--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-TOKEN_KEY='bababouille'
+SESSION_SECRET='supersecret'
 MONGO_URI='mongodb+srv://SENG513User:SENG513Project@cluster0.3f7kyz4.mongodb.net/?retryWrites=true&w=majority'
